update solutions